--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -1,12 +1,12 @@
 .container {
-    width: 100%;
-    height: 100%;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
-.title {
-    width: 200px;
-    font-size: 30px;
-    text-align: center;
+.img {
+    width: 100%;
+    height: 100%;
 }
