--- a/entry/src/main/js/default/pages/launcher/launcher.css
+++ b/entry/src/main/js/default/pages/launcher/launcher.css
@@ -1,8 +1,9 @@
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    /* align-items: stretch; */
+    align-items: baseline;
     left: 0px;
     top: 0px;
     width: 100%;
@@ -58,6 +59,6 @@
     background-color: #41ba41;
 }
 .img {
-    width: 100%;
-    height: 100%;
+    width: 10%;
+    height: 10%;
 }
