--- a/entry/src/main/js/default/pages/launcher/launcher.css
+++ b/entry/src/main/js/default/pages/launcher/launcher.css
@@ -1,13 +1,45 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    /* align-items: stretch; */
-    align-items: baseline;
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*     align-items: stretch; */
     left: 0px;
     top: 0px;
     width: 100%;
     height: 100%;
+/*    background-color: firebrick;*/
+    justify-content: center;
+}
+.todo-wrapper {
+    width: 48%;
+    height: 100%;
+/*    background-color: blue;*/
+    flex-direction: column;
+}
+.todo-item {
+    width: 100%;
+    height: 48%;
+/*    padding-top: 30px;*/
+/*    padding-bottom: 30px;*/
+/*    background-color: azure;*/
+    border-radius: 50px;
+}
+.todo-title {
+    width: 100%;
+    height: 80px;
+    text-align: center;
+}
+.appItem {
+    display: flex;
+    flex-direction: column;
+/*    justify-content: space-around;*/
+/* align-items: stretch; */
+    align-items: center;
+/*    left: 0px;*/
+/*    top: 0px;*/
+/*    width: 5%;*/
+    height: 100%;
+/*    background-color: yellow;*/
 }
 .swipeHint{
     display: flex;
@@ -37,28 +69,29 @@
 /*    background: linear-gradient(145deg, green);*/
 }
 .flex-box {
-    justify-content: space-around;
+/*    justify-content: space-around;*/
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 80%;
-    height: 50%;
-/*    background-color: #ffffff;*/
+/*    padding-top: 80px;*/
+/*    padding-left: 80px;*/
+    border-radius: 50px;
+    width: 100%;
+    height: 100%;
+
+/*    background-color: purple;*/
 }
 .flex-item {
-    width: 120px;
-    height: 120px;
-    border-radius: 16px;
+    width: 70%;
+    height: 70%;
 }
-.color-primary {
-    background-color: #007dff;
+.flex-text {
+    color: azure;
 }
-.color-warning {
-    background-color: #ff7500;
-}
-.color-success {
-    background-color: #41ba41;
-}
+
 .img {
-    width: 10%;
-    height: 10%;
+
+    width: 100%;
+    height: 100%;
+
 }
