--- a/entry/src/main/js/default/pages/launcher/launcher.css
+++ b/entry/src/main/js/default/pages/launcher/launcher.css
@@ -1,55 +1,52 @@
-.container {
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*     align-items: stretch; */
+.container {/*    display: flex;*/
+    flex-direction: row;/*    justify-content: center;*/
+    align-items: stretch;
     left: 0px;
     top: 0px;
     width: 100%;
-    height: 100%;
-/*    background-color: firebrick;*/
+    height: 100%;/*    background-color: firebrick;*/
     justify-content: center;
 }
+
 .todo-wrapper {
     width: 48%;
-    height: 100%;
-/*    background-color: blue;*/
+    height: 100%;/*    background-color: blue;*/
     flex-direction: column;
 }
+
 .todo-item {
     width: 100%;
-    height: 48%;
-/*    padding-top: 30px;*/
+    height: 48%;/*    padding-top: 30px;*/
 /*    padding-bottom: 30px;*/
 /*    background-color: azure;*/
     border-radius: 50px;
 }
+
 .todo-title {
     width: 100%;
     height: 80px;
     text-align: center;
 }
+
 .appItem {
     display: flex;
-    flex-direction: column;
-/*    justify-content: space-around;*/
+    flex-direction: column;/*    justify-content: space-around;*/
 /* align-items: stretch; */
-    align-items: center;
-/*    left: 0px;*/
+    align-items: center;/*    left: 0px;*/
 /*    top: 0px;*/
 /*    width: 5%;*/
-    height: 100%;
-/*    background-color: yellow;*/
+    height: 100%;/*    background-color: yellow;*/
 }
-.swipeHint{
-    display: flex;
-    flex-direction: column;
+
+.swipeHint {/*    flex-direction: column;*/
     justify-content: center;
     align-items: center;
     width: 20%;
     height: 20%;
+    background-color: firebrick;
 
 }
+
 .title {
     background-color: firebrick;
 
@@ -61,19 +58,17 @@
     width: 100%;
     margin: 10px;
 
-    font-size: 30px;
-/*    text-align: center;*/
+    font-size: 30px;/*    text-align: center;*/
 /*    display: flex;*/
 /*    padding: 1px;*/
 /*    opacity: 0.5;*/
 /*    background: linear-gradient(145deg, green);*/
 }
-.flex-box {
-/*    justify-content: space-around;*/
+
+.flex-box {/*    justify-content: space-around;*/
     justify-content: center;
     flex-direction: column;
-    align-items: center;
-/*    padding-top: 80px;*/
+    align-items: center;/*    padding-top: 80px;*/
 /*    padding-left: 80px;*/
     border-radius: 50px;
     width: 100%;
@@ -81,10 +76,12 @@
 
 /*    background-color: purple;*/
 }
+
 .flex-item {
     width: 70%;
     height: 70%;
 }
+
 .flex-text {
     color: azure;
 }
