--- a/entry/src/main/js/default/pages/weather/weather.css
+++ b/entry/src/main/js/default/pages/weather/weather.css
@@ -2,9 +2,59 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 454px;
-    width: 454px;
+    height: 100%;
+    width: 100%;
 }
+
+.outline{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    background-color: purple;
+}
+.temperature{
+    background-color: firebrick;
+
+
+}
+.weatherIcon{
+    height: 40px;
+    width: 40px;
+    background-color: azure;
+
+
+}
+.quote{
+    background-color: darkgray;
+
+}
+.widget{
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .rect{
     width: 200px;
     height: 200px;
