--- a/entry/src/main/js/default/pages/launcher/launcher.css
+++ b/entry/src/main/js/default/pages/launcher/launcher.css
@@ -1,25 +1,32 @@
-.container {/*    display: flex;*/
-    flex-direction: row;/*    justify-content: center;*/
+.container {
+    display: flex;
+        justify-content: center;
+    flex-direction: row;
     align-items: stretch;
-    left: 0px;
-    top: 0px;
+/*    left: 0px;*/
+/*    top: 0px;*/
     width: 100%;
-    height: 100%;/*    background-color: firebrick;*/
+    height: 100%;
+/*    background-color: firebrick;*/
     justify-content: center;
 }
 
 .todo-wrapper {
     width: 48%;
     height: 100%;/*    background-color: blue;*/
-    flex-direction: column;
+/*    flex-direction: column;*/
+    justify-content: center;
+    justify-content: flex-end;
 }
 
 .todo-item {
     width: 100%;
-    height: 48%;/*    padding-top: 30px;*/
+    height: 40%;/*    padding-top: 30px;*/
 /*    padding-bottom: 30px;*/
 /*    background-color: azure;*/
     border-radius: 50px;
+/*    align-content: center;*/
+    justify-content: center;
 }
 
 .todo-title {
@@ -28,24 +35,6 @@
     text-align: center;
 }
 
-.appItem {
-    display: flex;
-    flex-direction: column;/*    justify-content: space-around;*/
-/* align-items: stretch; */
-    align-items: center;/*    left: 0px;*/
-/*    top: 0px;*/
-/*    width: 5%;*/
-    height: 100%;/*    background-color: yellow;*/
-}
-
-.swipeHint {/*    flex-direction: column;*/
-    justify-content: center;
-    align-items: center;
-    width: 20%;
-    height: 20%;
-    background-color: firebrick;
-
-}
 
 .title {
     background-color: firebrick;
@@ -91,4 +80,18 @@
     width: 100%;
     height: 100%;
 
+}
+.swipeImg{
+/*    background-color: firebrick;*/
+    width: 36%;
+    height:100%;
+}
+.swipe-item {
+    width: 100%;
+    height: 23%;/*    padding-top: 30px;*/
+/*    padding-bottom: 30px;*/
+/*    background-color: azure;*/
+    border-radius: 50px;
+/*    align-content: center;*/
+    justify-content: center;
 }
