--- a/entry/src/main/js/default/pages/weather/weather.css
+++ b/entry/src/main/js/default/pages/weather/weather.css
@@ -4,7 +4,6 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    flex-direction: column;
 }
 
 /*.outline{*/
@@ -39,13 +38,6 @@
     white-space: pre;
     
 }
-.weatherIcon{
-    height: 100px;
-    width: 100px;
-    background-color: azure;
-
-
-}
 .quote{
 /*    height: 40%;*/
 /*    width: 40%;*/
@@ -73,13 +65,6 @@
 
 }
 
-
-
-
-
-
-
-
 .swiper-item {
     width: 454px;
     height: 454px;
@@ -88,6 +73,11 @@
 }
 .primary-item {
     background-color: #007dff;
+}
+/*天气图标*/
+.show {
+    width: 256px;
+    height: 256px;
 }
 .warning-item {
     background-color: #ff7500;
