--- a/entry/src/main/js/default/pages/index/index.css
+++ b/entry/src/main/js/default/pages/index/index.css
@@ -6,7 +6,21 @@
     height: 100%;
 }
 
+
 .img {
     width: 100%;
     height: 100%;
+    margin-bottom: 10px;
+    animation-name: aniname;
+    animation: aniname;
+}
+
+@keyframes aniname {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
