--- a/entry/src/main/js/default/pages/terminate/terminate.css
+++ b/entry/src/main/js/default/pages/terminate/terminate.css
@@ -1,8 +1,18 @@
-
 .container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.div-button {
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.button {
+  margin-top: 30px;
+  width: 280px;
 }
