--- a/entry/src/main/js/default/pages/launcher/launcher.css
+++ b/entry/src/main/js/default/pages/launcher/launcher.css
@@ -2,7 +2,7 @@
     display: flex;
         justify-content: center;
     flex-direction: row;
-    align-items: stretch;
+/*    align-items: stretch;*/
 /*    left: 0px;*/
 /*    top: 0px;*/
     width: 100%;
@@ -13,19 +13,17 @@
 
 .todo-wrapper {
     width: 48%;
-    height: 100%;/*    background-color: blue;*/
-/*    flex-direction: column;*/
+    height: 100%;
+    background-color: blue;
     justify-content: center;
-    justify-content: flex-end;
 }
 
 .todo-item {
     width: 100%;
     height: 40%;/*    padding-top: 30px;*/
 /*    padding-bottom: 30px;*/
-/*    background-color: azure;*/
-    border-radius: 50px;
-/*    align-content: center;*/
+    background-color: azure;
+/*    border-radius: 50px;*/
     justify-content: center;
 }
 
