--- a/entry/src/main/js/default/pages/weather/weather.css
+++ b/entry/src/main/js/default/pages/weather/weather.css
@@ -1,11 +1,13 @@
 .container {
-    display: flex;
-    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
 }
-
+.card {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+}
 /*.outline{*/
 /*    display: flex;*/
 /*    justify-content: center;*/
@@ -15,8 +17,6 @@
 /*    flex-direction: column;*/
 /*}*/
 .quote{
-/*    height: 40%;*/
-/*    width: 40%;*/
     height: 100%;
     width: 100%;
     background-color: darkgray;
@@ -42,14 +42,19 @@
     align-items: center;
 }
 .primary-item {
-    background-color: #007dff;
     flex-direction: column;
     justify-content: flex-start;
 }
 /*天气图标*/
+.show-up {
+    width: 100%;
+    height: 20%;
+    background-color: chartreuse;
+}
 .show-mid {
     width: 100%;
     height: 50%;
+    background-color: aqua;
 }
 .img-mid {
     margin-left: 15%;
@@ -60,6 +65,7 @@
     width: 40%;
     height: 100%;
     flex-direction: column;
+    text-align: center;
 }
 .city {
     margin-top: 25%;
