--- a/entry/src/main/js/default/pages/info/info.css
+++ b/entry/src/main/js/default/pages/info/info.css
@@ -7,11 +7,21 @@
   height: 454px;
   background-color: white;
 }
+.city_name{
+  margin-top: 5%;
+  height: 15%;
+  width: 40%;
+/*  background-color: blue;*/
+  color: black;
+  font-size: 38px;
+  text-align: center;
+}
 .chart {
-  width: 300px;
-  height: 300px;
+  width:70%;
+  height: 30%;
+  background-color: red;
 }
-.button {
-  width: 280px;
-  border-radius: 0px;
-}
+/*.button {*/
+/*  width: 280px;*/
+/*  border-radius: 0px;*/
+/*}*/
